[package]
name = "elgamal_capsule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2.33"
num = { version = "0.3.1", features = ["rand"] }
mt19937 = "2.0.1"
rand = { version = "0.6", default-features = false, optional = true }
rand_core = { version = "0.6", features = ["std"] }