[package]
name = "elgamal_wasm"
version = "0.2.1"
edition = "2021"

[dependencies]
encoding = "0.2.33"
num-bigint = { version = "0.4.3", default-features = false, features = ["rand"] }
num-integer = {version = "0.1.44", default-features = false}
num-traits = {version = "0.2.14", default-features = false}
mt19937 = "2.0.1"
rand = { version = "0.6", default-features = false, optional = true }
rand_core = { version = "0.6", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
    "derive",
] }
sp-core = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }

[features]
default = ["std"]
std = [
    "num-bigint/std",
    "num-integer/std",
    "num-traits/std",
    "rand/std",
    "rand_core/std"
]